updated BookRepositoryTest and BookRestControllerIntegrationTest